--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,24 @@
 body {
     font-family: 'Poppins', sans-serif;
 }
+
+
+/* scrollbar */
+
+::-webkit-scrollbar-track {
+    background: #f5f5f5;
+}
+
+
+/* Handle */
+
+ ::-webkit-scrollbar-thumb {
+    background: #000;
+}
+
+
+/* Handle on hover */
+
+ ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
